--- a/Android/UDOOMobileTanker/app/src/main/res/layout/mobile_tank.xml
+++ b/Android/UDOOMobileTanker/app/src/main/res/layout/mobile_tank.xml
@@ -1,54 +1,130 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               xmlns:opencv="http://schemas.android.com/apk/res-auto"
               android:layout_width="fill_parent"
               android:layout_height="fill_parent" android:orientation="horizontal" android:gravity="center_horizontal">
 
-<org.opencv.android.JavaCameraView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:visibility="visible"
-        android:id="@+id/CameraPreview"
-        android:layout_gravity="center|left"
-        opencv:show_fps="true"
-        opencv:camera_id="any" android:minHeight="540dp" android:minWidth="960dp" android:longClickable="false"/>
-    <ToggleButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="DEBUG"
-            android:id="@+id/debugButton" android:singleLine="true" android:onClick="toggleDebug"
-            android:nestedScrollingEnabled="true" android:layout_gravity="bottom" android:gravity="center_vertical|center_horizontal"/>
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  xmlns:opencv="http://schemas.android.com/apk/res-auto"
+                  android:layout_width="fill_parent"
+                  android:layout_height="fill_parent" android:orientation="vertical"
+                  android:gravity="center_horizontal" android:layout_weight="1">
+
+        <org.opencv.android.JavaCameraView
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:visibility="visible"
+                android:id="@+id/CameraPreview"
+                android:layout_gravity="center|left"
+                opencv:show_fps="true"
+                opencv:camera_id="any" android:minHeight="540dp" android:minWidth="960dp" android:longClickable="false"
+                android:layout_weight="1"/>
+        <LinearLayout
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" android:layout_weight="1" android:gravity="center_vertical|center_horizontal">
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent" android:layout_weight="1"
+                    android:layout_gravity="center_vertical|left">
+                <SeekBar
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:id="@+id/seekBarHue" android:layout_weight="1"
+                        android:max="2550"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="0"
+                        android:id="@+id/text_currentHue" android:layout_gravity="right"
+                        android:gravity="center_vertical|center_horizontal"/>
+            </LinearLayout>
+
+
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent" android:layout_weight="1"
+                    android:layout_gravity="center_vertical|left">
+                <SeekBar
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:id="@+id/seekBarSaturation" android:layout_weight="1" android:max="2550"/>
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="0"
+                        android:id="@+id/text_currentSaturation" android:layout_gravity="right"
+                        android:gravity="center_vertical|center_horizontal"/>
+            </LinearLayout>
+            <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="fill_parent"
+                    android:layout_height="fill_parent" android:layout_weight="1"
+                    android:layout_gravity="center_vertical|left">
+                <SeekBar
+                        android:layout_width="0dp"
+                        android:layout_height="fill_parent"
+                        android:id="@+id/seekBarValue" android:layout_weight="1" android:max="2550"
+                        />
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="fill_parent"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="0"
+                        android:id="@+id/text_currentValue" android:layout_gravity="right"
+                        android:gravity="center_vertical|center_horizontal"/>
+            </LinearLayout>
+            <Switch
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="New Switch"
+                    android:id="@+id/switch1" android:onClick="switchColorSchema" android:textOn="HSV"
+                    android:textOff="RGB"/>
+        </LinearLayout>
+    </LinearLayout>
     <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" android:gravity="center_vertical" android:layout_gravity="bottom"
-            android:baselineAligned="true">
-        <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/DirectionsImageView" android:layout_gravity="center"
-                android:contentDescription="Command"/>
-        <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Large Text"
-                android:id="@+id/DirectionsTextView" android:layout_gravity="center"/>
-        <ScrollView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/scrollView">
+                android:orientation="vertical"
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent" android:gravity="center_vertical" android:layout_gravity="bottom"
+                android:baselineAligned="true" android:layout_weight="1">
+            <ImageView
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/DirectionsImageView" android:layout_gravity="center"
+                    android:contentDescription="Command" android:layout_weight="3"/>
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="LOG\n"
-                    android:id="@+id/LogTextView"
-                    android:layout_gravity="bottom"/>
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:text="Large Text"
+                    android:id="@+id/DirectionsTextView" android:layout_gravity="center" android:layout_weight="1"/>
+            <ScrollView
+                    android:layout_width="fill_parent"
+                    android:layout_height="0dp"
+                    android:id="@+id/scrollView" android:layout_weight="3">
+                <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="LOG\n"
+                        android:id="@+id/LogTextView"
+                        android:layout_gravity="bottom"/>
 
-        </ScrollView>
+            </ScrollView>
+            <ToggleButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="DEBUG"
+                    android:id="@+id/debugButton" android:singleLine="true" android:onClick="toggleDebug"
+                    android:nestedScrollingEnabled="true" android:layout_gravity="center_horizontal|bottom"
+                    android:gravity="center_vertical|center_horizontal" android:layout_weight="1"/>
 
-    </LinearLayout>
+        </LinearLayout>
+
 
 </LinearLayout>
