--- a/Android/UDOOMobileTanker/app/src/main/res/layout/mobile_tank.xml
+++ b/Android/UDOOMobileTanker/app/src/main/res/layout/mobile_tank.xml
@@ -13,18 +13,18 @@
                   android:gravity="center_horizontal" android:layout_weight="1">
 
         <org.opencv.android.JavaCameraView
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:visibility="visible"
                 android:id="@+id/CameraPreview"
                 android:layout_gravity="center|left"
                 opencv:show_fps="true"
-                opencv:camera_id="any" android:minHeight="540dp" android:minWidth="960dp" android:longClickable="false"
-                android:layout_weight="1"/>
+                opencv:camera_id="any" android:minHeight="576dp" android:minWidth="720dp" android:longClickable="false"
+                android:layout_weight="0"/>
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
-                android:layout_height="fill_parent" android:layout_weight="1" android:gravity="center_vertical|center_horizontal">
+                android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center_vertical|center_horizontal">
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="fill_parent"
