--- a/Android/UDOOMobileTanker/app/src/main/res/layout/mobile_tank.xml
+++ b/Android/UDOOMobileTanker/app/src/main/res/layout/mobile_tank.xml
@@ -3,21 +3,22 @@
               xmlns:tools="http://schemas.android.com/tools"
               xmlns:opencv="http://schemas.android.com/apk/res-auto"
               android:layout_width="fill_parent"
-              android:layout_height="fill_parent" android:orientation="horizontal" android:gravity="center_horizontal">
+              android:layout_height="fill_parent" android:orientation="horizontal" android:gravity="center_horizontal"
+              android:padding="10dp">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                   xmlns:tools="http://schemas.android.com/tools"
                   xmlns:opencv="http://schemas.android.com/apk/res-auto"
                   android:layout_width="fill_parent"
                   android:layout_height="fill_parent" android:orientation="vertical"
-                  android:gravity="center_horizontal" android:layout_weight="1">
+                  android:gravity="center_horizontal" android:layout_weight="1" android:paddingRight="10dp">
 
         <org.opencv.android.JavaCameraView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:visibility="visible"
                 android:id="@+id/CameraPreview"
-                android:layout_gravity="center|left"
+                android:layout_gravity="center"
                 opencv:show_fps="true"
                 opencv:camera_id="any" android:minHeight="576dp" android:minWidth="720dp" android:longClickable="false"
                 android:layout_weight="0"/>
@@ -25,7 +26,7 @@
                 android:orientation="vertical"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content" android:layout_weight="1"
-                android:gravity="center_vertical|center_horizontal">
+                android:gravity="center_vertical|center_horizontal" android:paddingTop="10dp">
             <LinearLayout
                     android:orientation="horizontal"
                     android:layout_width="fill_parent"
@@ -40,9 +41,9 @@
                         android:gravity="center_vertical|center_horizontal"/>
                 <SeekBar
                         android:layout_width="0dp"
-                        android:layout_height="fill_parent"
+                        android:layout_height="wrap_content"
                         android:id="@+id/seekBarHue" android:layout_weight="1"
-                        android:max="3600"/>
+                        android:max="3600" android:layout_gravity="center"/>
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="fill_parent"
@@ -67,8 +68,9 @@
                         android:gravity="center_vertical|center_horizontal"/>
                 <SeekBar
                         android:layout_width="0dp"
-                        android:layout_height="fill_parent"
-                        android:id="@+id/seekBarSaturation" android:layout_weight="1" android:max="1000"/>
+                        android:layout_height="wrap_content"
+                        android:id="@+id/seekBarSaturation" android:layout_weight="1" android:max="1000"
+                        android:layout_gravity="center"/>
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="fill_parent"
@@ -91,9 +93,9 @@
                         android:gravity="center_vertical|center_horizontal"/>
                 <SeekBar
                         android:layout_width="0dp"
-                        android:layout_height="fill_parent"
+                        android:layout_height="wrap_content"
                         android:id="@+id/seekBarValue" android:layout_weight="1" android:max="1000"
-                        />
+                        android:layout_gravity="center"/>
                 <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="fill_parent"
@@ -108,9 +110,9 @@
             android:orientation="vertical"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" android:gravity="center_vertical" android:layout_gravity="bottom"
-            android:baselineAligned="true" android:layout_weight="1">
+            android:baselineAligned="true" android:layout_weight="1" android:paddingLeft="10dp">
         <ImageView
-                android:layout_width="fill_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/DirectionsImageView" android:layout_gravity="center"
                 android:contentDescription="Command" android:layout_weight="3"/>
@@ -118,7 +120,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="Large Text"
+                android:text="@string/Chose_a_color"
                 android:id="@+id/DirectionsTextView" android:layout_gravity="center" android:layout_weight="1"/>
         <ScrollView
                 android:layout_width="fill_parent"
@@ -127,18 +129,29 @@
             <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="LOG\n"
                     android:id="@+id/LogTextView"
                     android:layout_gravity="bottom"/>
 
         </ScrollView>
-        <ToggleButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="DEBUG"
-                android:id="@+id/debugButton" android:singleLine="true" android:onClick="toggleDebug"
-                android:nestedScrollingEnabled="true" android:layout_gravity="center_horizontal|bottom"
-                android:gravity="center_vertical|center_horizontal" android:layout_weight="1"/>
+        <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:layout_gravity="center_horizontal"
+                android:gravity="center_vertical|center_horizontal">
+            <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Log"
+                    android:id="@+id/textView" android:layout_gravity="center_vertical|right"
+                    android:singleLine="false"/>
+            <ToggleButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="DEBUG"
+                    android:id="@+id/debugButton" android:singleLine="true" android:onClick="toggleDebug"
+                    android:nestedScrollingEnabled="true" android:layout_gravity="center_vertical"
+                    android:gravity="center_vertical|center_horizontal"/>
+        </LinearLayout>
 
     </LinearLayout>
 
